# NetFix

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: windows-validate.yml
docs/: windows-release.md
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  relic.conf.example  tauri.conf.json  tauri.windows.conf.json  tauri.windows.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  diagnostics.rs  main.rs
src-tauri/windows/: aegis-trace.manifest  aegis-trace.rc
src/components/common/: IconMap.tsx  SafetyPill.tsx  StatusPill.tsx
src/components/dashboard/: FindingsPanel.tsx  RecentScans.tsx  StatusOverview.tsx
src/components/details/: DetailsPanel.tsx  EvidenceList.tsx  TechnicianDetails.tsx
src/components/fixes/: ConfirmFixModal.test.tsx  ConfirmFixModal.tsx  FixActionCard.tsx  RepairPlanPanel.tsx  RepairVerificationPanel.tsx
src/components/layout/: AppShell.tsx
src/core/: diagnosisScoring.test.ts  diagnosisScoring.ts  diagnosticEngine.ts  fixRegistry.ts  mockData.test.ts  mockData.ts  mockRepairOutcomes.ts  repairVerification.test.ts  repairVerification.ts  reportExport.test.ts  reportExport.ts  runtimeHealth.test.ts  runtimeHealth.ts  scanHistory.test.ts  scanHistory.ts  timelineDefinition.ts  types.ts
src/hooks/: useDiagnosticScan.ts  useFooterMetrics.ts
src/platform/: mockAdapter.ts  platformAdapter.ts  tauriAdapter.ts
src/styles/: index.css
src/utils/: async.test.ts  async.ts  status.ts
(+8 files in other folders)
