[package]
name = "aegis-network-doctor"
version = "0.1.0"
description = "A visual Wi-Fi and network diagnostic utility for Windows"
authors = ["Aegis Network Doctor"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
time = { version = "0.3", features = ["formatting"] }
