[package]
name = "aegis-trace"
version = "0.1.0"
description = "A visual Wi-Fi and network diagnostic utility for Windows"
authors = ["Aegis Trace"]
edition = "2021"

[build-dependencies]
embed-resource = "3"
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tauri = { version = "2", features = [] }
time = { version = "0.3", features = ["formatting"] }
